Remove logo-container styles. Add styles for logo-home-container

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,10 +5,9 @@
   justify-content: space-between;
   margin-bottom: 25px;
 
-  .logo-container {
-    height: 100%;
-    width: 70px;
-    padding: 25px;
+  .logo-home-container {
+    margin: 5px 0 0 10px;
+    text-align: center;
   }
 
   .options {
