--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,10 @@ body {
   font-size: 18px;
 }
 
+#root>div>div.react-notification-root>div.notification-container-top-center>div>div>div>div.notification-title {
+  text-transform: capitalize;
+}
+
 a {
   text-decoration: none;
   color: #000;
