--- a/client/src/components/CollectionItem/CollectionItem.scss
+++ b/client/src/components/CollectionItem/CollectionItem.scss
@@ -43,12 +43,13 @@
     font-size: 18px;
 
     .name {
-      width: 90%;
+      width: 80%;
       margin-bottom: 15px;
     }
 
     .price {
-      width: 10%;
+      width: 20%;
+      text-align: end;
     }
   }
 }
